Fix spacing on action status

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -58,7 +58,8 @@
 
 .action-item .action-status {
   font-style: oblique;
-
+  display: inline-block;
+  padding-bottom: 1rem;
   grid-column-start: 2;
   grid-row: 1;
 }
